--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: Centrarium
-subtitle: "A simple yet classy theme for your Jekyll website or blog"
-email: blcentra@gmail.com
-name: Ben Centra
+title: Easydata
+subtitle: "machinelearning,deep learning and nlp"
+email: jibong7600@gmail.com
+name: JiWon Lee
 description: >
   A simple yet classy theme for your Jekyll website or blog.
 # Base URL of site (i.e. /blog). It should always start with a slash,
